test/fixtures/syntaxerrors/k.lys.ast.desugar
|-Document(0,30)
  |-(AstCons)
    |-(AstCons)
      |-(AstCons)
        |-VarDirective(0,24)
          |-(AstCons)
            |-NoModifier(0,0)
              <Rule0>
            |-VarDeclaration(0,24)
              |-(AstCons)
                |-NameIdentifier(4,5)
                  |-Identifier=a
                |-MatchExpression(8,24)
                  |-(AstCons)
                    |-Reference(14,15)
                      |-QName(14,15)
                        |-NameIdentifier(14,15)
                          |-Identifier=x
                    |-MatchBody(16,24)
                      |-(AstCons)
                        |-<UNEXPECTED TOKEN>=else
                        |-<UNEXPECTED TOKEN>= 
        |-<UNEXPECTED TOKEN>=map
      |-<UNEXPECTED TOKEN>= 
    |-<UNEXPECTED TOKEN>=1